--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,34 +28,7 @@
     .redesign .container .inner .content {
         width: 1100px;
     }
-    /* ------ design ------ */
-/* 
-    .design .container .inner .content-wrap {
-        grid-gap: 10px;
-    }
-    .design .container .card .content-wrap .content {
-    width: 220px ; height: 220px;
-    }
-    .design .container .card .content-wrap .content .hover {
-        width: 220px ; height: 220px;
-    }
-    .design .container .card .content-wrap .content .hover a {
-        width: 220px ; height: 220px;
-        top: -220px; 
-    }
-    .design .container .card .content-wrap .content:nth-child(8) .img {
-        width: 220px ; height: 220px;
-    }
-    .design .page .content-wrap .content .img {  
-        width: 220px; height: 620px;
-    }
-    .design .page .content-wrap .content .hover {
-        width: 220px; height: 620px;
-    }
-    .design .page .content-wrap .content .hover .hover-inner {
-    width: 220px; height: 620px;
-    bottom: 620px;
-    } */
+
 }
 @media screen and (max-width:1540px) {
     .profile .container .inner .content .info {
@@ -238,29 +211,7 @@
         .redesign .container .inner .content .btnwrap a {
             font-size: 1rem;
         }
-        /* .design .container .card .content-wrap .content {
-            width: 200px ; height: 200px;
-        }
-        .design .container .card .content-wrap .content .hover {
-            width: 200px ; height: 200px;
-        }
-        .design .container .card .content-wrap .content .hover a {
-            width: 200px ; height: 200px;
-            top: -200px; 
-        }
-        .design .container .card .content-wrap .content:nth-child(8) .img {
-            width: 200px ; height: 200px;
-        }
-        .design .page .content-wrap .content .img {  
-            width: 200px; height: 600px;
-        }
-        .design .page .content-wrap .content .hover {
-            width: 200px; height: 600px;
-        }
-        .design .page .content-wrap .content .hover .hover-inner {
-            width: 200px; height: 600px;
-            bottom: 600px;
-        } */
+
         /*--------------- footer -------------- */
         footer .container .inner .left {
         width: 70%;
@@ -289,7 +240,6 @@
         margin: 0 auto;
     }
     .profile .container .inner .content .info {
-        /* margin-top: 6rem; */
         display: flex;
         flex-direction: column;
         margin: 0 auto;
@@ -298,12 +248,9 @@
     .profile .container .inner .intro {
         font-size: 1.5rem;
     }
-    .profile .container .inner .content .mainimg {
-        width: 380px;
-        height: 480px;
-    }
     .profile .container .inner .content .info .left {
         width: 380px;
+        margin-left: 0;
     }
     .profile .container .inner .content .info .right{
         width: 380px;
@@ -317,6 +264,9 @@
     }
     .coding .container {
         padding: 20rem 4rem 10rem 22rem;
+    }
+    .coding .container .inner {
+        padding: 6rem 0 0 0;
     }
     .redesign .container {
         padding: 5rem 8rem 10rem 20rem;
@@ -345,88 +295,7 @@
     .app .container .inner .btn .btnwrap a {
         font-size: 1.2rem;
     }
-    /* .design .container .card .content-wrap .content {
-        width: 180px ; height: 180px;
-    }
-    .design .container .card .content-wrap .content .hover {
-        width: 180px ; height: 180px;
-    }
-    .design .container .card .content-wrap .content .hover a {
-        width: 180px ; height: 180px;
-        top: -180px; 
-    }
-    .design .container .card .content-wrap .content:nth-child(8) .img {
-        width: 180px ; height: 180px;
-    }
-    .design .page .content-wrap .content .img {  
-        width: 180px; height: 580px;
-    }
-    .design .page .content-wrap .content .hover {
-        width: 180px; height: 580px;
-    }
-    .design .page .content-wrap .content .hover .hover-inner {
-        width: 180px; height: 580px;
-        bottom: 580px;
-    } */
-    footer .container .inner {
-        display: flex;
-        flex-direction: column;
-    }
-    footer .container .inner .left {
-        width: 100%;
-        margin-bottom: 40px;
-    }
-    footer .container .inner .logo {
-        margin: 0 auto;
-    }
-}
-@media screen and (max-width:925px) {
-    header .logo a img {
-        width: 190px;
-    }
-    header .leftbar ul li {
-        padding: 10px 0;
-    }
-    .leftbar ul li a {
-        font-size: 1.2rem;
-    }
-    .leftbar ul li a:hover, .leftbar ul li a.on  {
-        padding-left: 20px;
-    }
-    .leftbar ul li a::after {
-        top: 19px;
-        width: 9px;
-        height: 9px;
-    }
-    .p-title{
-         display: block;
-    }
-    .title {
-        display: none;
-    }
-    .coding .container {
-        padding: 30rem 4rem 2rem 22rem;
-        margin-bottom: 15rem;
-    }
-    .coding .container .title {
-        display: none;
-    }
-    .redesign .container{
-        padding: 5rem 8rem 3rem 20rem;
-    }
-    .redesign .container .inner .content {
-        width: 500px;
-    }
-    .redesign .container .inner .content img {
-        width: 500px;
-    }
-    .app .container {
-        padding: 3rem 8rem 4rem 20rem;
-    }
-    .app .container .inner {
-        padding: 5rem 8rem 0 0;
-    }
-    /* .design .container .card .content-wrap .content {
+    .design .container .card .content-wrap .content {
         width: 150px ; height: 150px;
     }
     .design .container .card .content-wrap .content .hover {
@@ -439,14 +308,325 @@
     .design .container .card .content-wrap .content:nth-child(8) .img {
         width: 150px ; height: 150px;
     }
+    .design .page .content-wrap .content {
+        width: 150px; height: 580px;
+    }
+    .design .page .content-wrap .content .hover {
+        width: 150px; height: 580px;
+    }
+    .design .page .content-wrap .content .hover .hover-inner {
+        width: 150px; height: 580px;
+        bottom: 580px;
+    }
     .design .page .content-wrap .content .img {  
         width: 150px; height: 580px;
     }
     .design .page .content-wrap .content .hover {
-        width: 180px; height: 550px;
+        width: 180px; height: 580px;
+    }
+    footer .container .inner {
+        display: flex;
+        flex-direction: column;
+    }
+    footer .container .inner .left {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+    footer .container .inner .logo {
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width:900px) {
+    .redesign .container .inner .content {
+        width: 500px;
+    }
+    .redesign .container .inner .content img {
+        width: 500px;
+    }
+
+}
+@media screen and (max-width:850px) {
+    header .logo {
+        opacity: 0;
+        visibility: hidden;
+    }
+    header .m-logo {
+        opacity: 1;
+        visibility: visible;
+    }
+    header .mobile {
+        opacity: 1;
+        visibility: visible;
+    }
+    header .leftbar {
+        opacity: 0;
+        visibility: hidden;
+    }
+    .profile .title, .coding .title  {
+        display: none;
+    }
+    .p-title {
+        display: block;
+    }
+    main .main_sec .container {
+        font-size: 4rem;
+    }
+    .profile .container {
+        padding: 5rem 8rem 3rem 8rem;
+    }
+    /* -------------coding---------- */
+    .coding .container {
+        padding: 5rem 8rem 3rem 8rem;
+        margin-bottom: 15rem;
+    }
+    .coding .container .title {
+        display: none;
+    }
+    .coding .container .inner {
+        padding: 0;
+    }
+    .coding .container .inner .Swiper1{
+        display: none;
+    } 
+    .coding .container .inner .mobile-Swiper {
+        display: block;
+    }
+    .coding .container .icon {
+        display: none;
+    }
+    /* -------------redesign---------- */
+    .redesign .container{
+        padding: 5rem 8rem 3rem 8rem;
+    }
+    .redesign .container .inner .content {
+        width: 500px;
+        margin: 0 auto;
+    }
+    .redesign .container .inner .content img {
+        width: 500px;
+    }
+    .redesign .container .icon {
+        display: none;
+    }
+    /* -------------app---------- */
+    .app .container {
+        padding: 5rem 8rem 3rem 8rem;
+    }
+    .app .container .inner {
+        padding: 5rem 8rem 0 0;
+    }
+    .app .clover {
+        display: none;
+    }
+    /* -------------design---------- */
+    .design .container {
+        padding: 10rem 8rem 3rem 8rem;
+    }
+    .design .container .card .content-wrap .content {
+        width: 150px ; height: 150px;
+    }
+    .design .container .card .content-wrap .content .hover {
+        width: 150px ; height: 150px;
+    }
+    .design .container .card .content-wrap .content .hover a {
+        width: 150px ; height: 150px;
+        top: -150px; 
+    }
+    .design .container .card .content-wrap .content:nth-child(8) .img {
+        width: 150px ; height: 150px;
+    }
+    .design .page .content-wrap .content {
+        width: 150px; height: 580px;
+    }
+    .design .page .content-wrap .content .hover {
+        width: 150px; height: 580px;
     }
     .design .page .content-wrap .content .hover .hover-inner {
-        width: 180px; height: 550px;
-        bottom: 550px;
-    } */
+        width: 150px; height: 580px;
+        bottom: 580px;
+    }
+    .design .page .content-wrap .content .img {  
+        width: 150px; height: 580px;
+    }
+    .design .page .content-wrap .content .hover {
+        width: 180px; height: 580px;
+    }
+    main .container .icon {
+        display: none;
+    }
+    footer .container {
+        padding: 5rem 8rem 3rem 8rem;
+    }
+}
+@media screen and (max-width:682px) {
+    main .main_sec .container{
+        font-size: 3.5rem;
+    }
+    .p-title{
+        font-size: 3.3rem;
+    }
+    .profile .container {
+        padding-bottom: 25rem;
+    }
+    .profile .container .inner .intro p {
+        font-size: 1.2rem; 
+        line-height: 1.3; 
+        word-break: keep-all; 
+    }
+    .coding .container {
+        margin-bottom: 5rem;
+    }
+    .coding .inner .swiper-wrapper .swiper-slide.swiper-slide-active img {
+        margin-top: 3rem;
+    }
+    .mobile-Swiper .swiper-button-prev {
+        top: 39%;
+    }
+    .mobile-Swiper .swiper-button-next {
+        top: 39%; left: 92%;
+    }
+    .redesign .container .inner .content {
+        width: 400px;
+        margin: 0 auto;
+    }
+    .redesign .container .inner .content:nth-child(2) {
+        margin-top: 3rem;
+    }
+    .redesign .container .inner .content img {
+        width: 400px;
+    }
+    .redesign .container .inner .content .txtbox {
+        height: 200px;
+    }
+    .redesign .container .inner .content .txtbox h2 {
+        font-size: 1.6rem;
+        padding: 20px 0 5px 0;
+    }
+    .redesign .container .inner .content .txtbox p {
+        font-size: 0.8rem;
+    }
+    .redesign .container .inner .content .btnwrap a {
+        font-size: 0.9rem;
+    }
+    .redesign .container .inner .content .btnwrap {
+        width: 225px;
+        height: 41px;
+        padding: 14px 18px ;
+    }
+    .app .container .inner .imgbox {
+        width: 360px;
+    }
+    .app .container .inner .txtwrap .txtbox {
+        width: 360px;
+    }
+    .app .container .inner .txtwrap h2 {
+        font-size: 1.6rem;
+        padding: 10px 0;
+    }
+    .app .container .inner .txtwrap h2:nth-child(2) {
+        font-size: 2.5rem;
+    }
+    .app .container .inner .txtwrap p {
+        font-size: 0.9rem;
+    }
+    .app .container .inner .btn {
+        padding-top: 37px;
+    }
+    .app .container .inner .btn .btnwrap {
+        width: 120px;
+        height: 42px;
+    }
+    .app .container .inner .btn .btnwrap a {
+        font-size: 1rem;
+    }
+    footer .container .inner .left .text {
+        width: 80%;
+    }
+}
+@media screen and (max-width:540px) {
+    .profile .container {
+        padding: 5rem 3rem 3rem 3rem;
+    }
+    .coding .container {
+        padding: 5rem 3rem 3rem 3rem;
+    }
+    .coding .inner .swiper-wrapper .swiper-slide.swiper-slide-active img {
+        width: 300px;
+    }
+    .redesign .container {
+        padding: 5rem 0 3rem 0;
+    }
+    .app .container {
+        padding: 5rem 3rem 3rem 3rem;
+    }
+    .app .container .inner {
+        padding: 0;
+        margin: 0 auto;
+    }
+    .app .container .inner .imgbox .img {
+        width: 140px;
+    }
+    .design .container {
+        padding: 5rem 3rem 3rem 3rem;
+    }
+    .design .container .card .content-wrap .content {
+        width: 100px ; height: 100px;
+    }
+    .design .container .content-wrap .content .img {
+        border-radius: 10px;
+    }
+    .design .container .card .content-wrap .content .hover {
+        width: 100px ; height: 100px;
+    }
+    .design .container .card .content-wrap .content .hover a {
+        width: 100px ; height: 100px;
+        top: -100px; 
+    }
+    .design .container .card .content-wrap .content:nth-child(8) .img {
+        width: 100px ; height: 100px;
+        font-size: 1.2rem;
+    }
+    .design .page .content-wrap .content {
+        width: 100px; height: 450px;
+    }
+    .design .page .content-wrap .content .hover {
+        width: 100px; height: 450px;
+    }
+    .design .page .content-wrap .content .hover .hover-inner {
+        width: 100px; height: 450px;
+        bottom: 450px;
+        border-radius: 10px;
+    }
+    .design .page .content-wrap .content .img {  
+        width: 100px; height: 450px;
+    }
+    .design .page .content-wrap .content .hover {
+        width: 100px; height: 450px;
+    }
+    .design .page .content-wrap .content .hover-inner p {
+        font-size: 1rem;
+        line-height: 30px;
+    }  
+    /* 배너 팝업 */
+    .design .card .popup {
+        width: 50%; height: 100%;
+    }
+    .design .card .popup .popup-img {
+        width: 300px; height: 300px;
+    }
+    /* footer */
+    footer .container {
+        padding: 5rem 4rem 3rem;
+    }
+    footer .container .inner .left .box {
+        width: 85px; height: 85px;
+    }
+    footer .container .inner .left .resume {
+        height: 102px;
+        display: flex;
+        align-items: center;
+    }
+    footer .container .inner .logo {
+        width: 250px;
+    }
 }
