--- a/css/style.css
+++ b/css/style.css
@@ -39,39 +39,52 @@ header {
     background-color: black;
     color: white;
 }
-
 header .logo {
     position: fixed;
     width: 200px;
     height: 100px;
     margin: 5rem 5rem;
     z-index: 10; 
+    opacity: 1;
+    visibility: visible;
 }
-header .logo a {
+/* header .logo a {
     width: 100%; height: 100%;
     display: block;
     pointer-events: auto; 
-}
+} */
 header .logo a img {
     width: 250px; 
+}
+header .m-logo {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    margin: 3.8rem 3.8rem;
+    z-index: 10; 
+    opacity: 0;
+    visibility: hidden;
+}
+header .m-logo a img {
+    width: 50px; 
 }
 header .leftbar {
     position: fixed;
     z-index: 9;
     width: 450px;
     padding: 300px 5rem;
+    opacity: 1;
+    visibility: visible;
 }
 header .leftbar ul li {
     padding: 20px 0;
     position: relative;
 }
-
 .leftbar ul li a {
     font-family: 'waguri';
     font-size: 1.8rem;
     transition: all  .3s;
 }
-
 .leftbar ul li a:hover, .leftbar ul li a.on  {
     padding-left: 35px;
 }
@@ -118,6 +131,72 @@ header .leftbar ul li {
     background-color: #F790EB;
 }
 
+header .mobile {
+    position: fixed;
+    width: 100%;
+    background-color: rgba(234, 234, 234, 0.8);
+    opacity: 0;
+    visibility: hidden;
+}
+header .mobile .hamburger {
+    cursor: pointer;
+    position: absolute;
+    top: 80px;right: 50px;
+    z-index: 999;
+}
+
+header .mobile .hamburger span {
+    width: 30px;
+    height: 3px;
+    display: block;
+    background-color: #fff;
+    transition: all .5s;
+}
+header .mobile .hamburger span + span {
+    margin-top: 7px;
+}
+header .mobile .m-nav {
+    position: absolute;
+    width: 100%;
+    margin: 0 auto;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 990;
+
+}
+header .mobile .m-nav.on {
+    display: block; 
+}
+header .mobile .m-nav ul {
+    padding: 10rem 0;
+}
+header .mobile .m-nav li {
+    text-align: center;
+    padding-top: 40px;
+    /* width: 100%; */
+}
+header .mobile .m-nav li a {
+    font-size: 2.2rem;
+    font-family: 'waguri';
+    font-weight: 400;
+    transition: all .3s;
+}
+header .mobile .m-nav ul li:nth-child(1):hover a {
+    color: #FFB039;
+}
+header .mobile .m-nav ul li:nth-child(2):hover a {
+    color: #0ECB7B;
+}
+header .mobile .m-nav ul li:nth-child(3):hover a {
+    color: #FF0753;
+}
+header .mobile .m-nav ul li:nth-child(4):hover a {
+    color: #6F47DB;
+}
+header .mobile .m-nav ul li:nth-child(5):hover a {
+    color: #F790EB;
+}
+
 /* -----------------main----------------- */
 main {
     width: 100%;
@@ -144,7 +223,7 @@ main .main_sec .container{
     width: 100%;
     padding: 25rem 0;
     display: flex;
-    font-size: 7rem;
+    font-size: 10rem;
     font-family: 'pre-black';
     justify-content: center;
     align-items: center;
@@ -190,26 +269,28 @@ main .main_sec .container{
     padding: 12rem 8rem 10rem 27rem;
     margin-bottom: 20rem;
 }
-.title {
+.profile .title, .coding .title  {
     font-family: 'pre-black';
+    display: block;
 }
 .p-title{
     display: none;
     font-family: 'pre-black';
     font-size: 4.3rem;
 }
+.profile {
+    width: 100%;
+}
 .profile .container .inner {
     width: 100%;
     padding: 20px 0;
 }
-.profile .container .inner .intro {
+.profile .container .inner .intro p {
     max-width: 800px;
     font-size: 2.2rem;
     padding-top: 40px;
 }
-.profile .container .inner .intro p {
-    line-height: 1.5;
-}
+
 .profile .container .inner .intro span {
     color: #FFB039;
 }
@@ -304,6 +385,9 @@ main .main_sec .container{
 
 
 /* -----------------project-------------- */
+.coding {
+    width: 100%;
+}
 .coding .container {
     width: 100%;
     background-color: black;
@@ -317,10 +401,12 @@ main .main_sec .container{
 }
 /* -----------clone coding------------- */
 .coding .container .inner {
-    padding: 6rem 10rem 0 0rem;
+    padding: 6rem 19rem 0 13rem;
     display: flex;
 }
-
+.coding .container .inner .Swiper1{
+    display: block;
+}
 .coding .container .inner .swiper-wrapper {
     display: flex;
     align-items: center;
@@ -336,9 +422,30 @@ main .main_sec .container{
     transform: scale(0.8); 
 }
 .coding .inner .swiper-wrapper .swiper-slide img {
-    width: 300px;
+    position: relative;
+    z-index: 9;
+    width: 400px;
     transition: transform 0.3s ease;
     cursor: grab;
+}
+.coding .inner .swiper-wrapper .swiper-slide.swiper-slide-active img {
+    width: 520px;
+}
+.coding .container .inner .mobile-Swiper {
+    display: none;
+    position: relative;
+}
+
+.mobile-Swiper .swiper-button-prev {
+    position: absolute; 
+    top: 29%;  left: 0%;
+    color: #0ECB7B;
+
+}
+.mobile-Swiper .swiper-button-next {
+    position: absolute; 
+    top: 29%;  left: 95%;
+    color: #0ECB7B;
 }
 
 .coding .inner .swiper-wrapper .swiper-slide .btn {
@@ -358,7 +465,7 @@ main .main_sec .container{
 }
 
 .coding .inner .swiper-wrapper .swiper-slide.swiper-slide-active img {
-    width: 700px;
+    width: 740px;
     position: relative;
     z-index: 99;
 }
@@ -384,10 +491,6 @@ main .main_sec .container{
     text-align: center;
     position: relative;
     z-index: 999;
-}
-.coding .inner .swiper-wrapper .swiper-slide img {
-    position: relative;
-    z-index: 9;
 }
 .coding .inner .swiper-wrapper .swiper-slide.swiper-slide .btn {
     margin-top: 35px;
@@ -421,6 +524,7 @@ main .main_sec .container{
 }
 .coding .container .icon {
     position: relative;
+    display: block;
 }
 .coding .container .icon .stick {
     position: absolute;
@@ -543,6 +647,7 @@ main .main_sec .container{
 }
 .redesign .container .icon {
     position: relative;
+    display: block;
 }
 .redesign .container .icon .ellipse {
     position: absolute;
@@ -636,7 +741,6 @@ main .main_sec .container{
 .app .container .inner .btn .btnwrap:hover{
     background-color: #6F47DB;
 }
-
 .app .container .inner .btn .btnwrap a {
     display: flex;
     justify-content: center;
@@ -649,6 +753,7 @@ main .main_sec .container{
     animation: clover 10s linear infinite;
     margin-top: 7rem;
     overflow: hidden;
+    display: block;
 }
 @keyframes clover {
     0% {
@@ -670,6 +775,7 @@ main .main_sec .container{
     position: relative;
 }
 .design .container .inner .title {
+    width: 100%;
     font-family: 'waguri';
     font-size: 2rem;
     font-weight: 400;
@@ -850,10 +956,11 @@ main .main_sec .container{
 
 main .container .icon {
     position: relative;
+    display: block;
 }
 main .container .icon .ellipse2 {
     position: absolute;
-    right: 0%; bottom: 500px;
+    right: -10%; bottom: -20%;
     width: 400px; height: 400px;
     opacity: 0.5;
     background: url(../images/ellipse2.png) no-repeat center/contain;
